<resources>
    <string name="app_name">CrudAndroid</string>
    <string name="login_text_title">Crud en Android</string>
    <string name="login_hint_name">Ingresa Nombre</string>
    <string name="login_hint_email">Ingresa Correo Electronico</string>
    <string name="login_btn_ingresar">Ingresar</string>
    <string name="login_btn_vista">vista</string>
    <string name="recly_id">id</string>
    <string name="recly_name">Name</string>
    <string name="recly_email">Email</string>
    <string name="recli_delete">Delete</string>
</resources>